config/k8s-manifest/gmfs-merchportal-holder/1-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portalapp
  namespace: merchantportaltest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: merchantportal
  template:
    metadata:
      labels:
        app: merchantportal
    spec:
      containers:
        - name: portalapp
          image: aputra/myapp-195:v2
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 128Mi
              cpu: 100m
