config/k8s-manifest/gmfs-merchportal-holder/2-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: portalapp
  namespace: merchantportaltest
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: merchantportal
